@@ -58,8 +58,9 @@ SVN trunk (1.1+svn):
    * all currently used abilities added as macros in data/abilities.cfg
    * abilities can receive time of day and terrain [filter]
      - ambush and nightstalk are available via the new [hides] ability tag
-   * added a optionnal random_leader= tag inside a [multiplayer_side] to
+   * added a optional random_leader= tag inside a [multiplayer_side] to
      specify a different list of randomly selectable leaders
+   * added level as a possible argument for standard unit [filter]
  * Miscellaneous
    * anonymous data logging for single player campaigns, see stats.wesnoth.org
    * zipios++ can now be disabled by passing --without-zipios to configure
